[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shuler"
version = "0.1.0"
description = "Reusable Python functions for API tasks"
authors = [
  { name="Shuler Littleton", email="shulerlittleton70@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/shulerlittleton70/shuler"